theme11/theme11.css
/* ... */
#links span {
	border-bottom: none;
	color: var(--bg);
	display: inline-flex;
	padding: 0.5em 0.75em;
}
#links .current-page { font-weight: bold }
#mobnav { display: inline-block }
#mobnav:not(.a, .s, .r, .ar) { display: none }
#mobnav a:hover, #mobnav:hover span, #pages:hover span {
	color: var(--text);
	background-color: var(--bg2);
}
/* #endregion */
/* #region Custom pages */
#links #pages { display: inline-block }
#pages:not(:hover) .dropdown { opacity: 0; pointer-events: none }
#pages .dropdown {
	position: absolute;
	left: 0;
	display: flex;
	flex-direction: column;
	background-color: var(--bg2);
	padding: 0.25em;
	box-shadow: 0.1em 0.1em 0.25em -0.1em rgba(var(--text--rgb), 0.75);
}
#pages span { cursor: help }
#pages .dropdown a {
	padding: .75em .5em .5em;
	border-color: var(--text);
}
#pages .dropdown a:last-child { border-bottom: none }
#pages .dropdown a:hover {
	color: inherit;
	background-color: rgba(var(--bg--rgb), 0.25);
}
/* #endregion */
/* #region Search bar */
#search {
	display: flex;
	align-items: center;
	gap: 0.7em;
	margin: 0.175em 0;
}
#search input {
	border: none;
	margin: 0;
	color: var(--text);
	background: var(--bg) linear-gradient(var(--bg), var(--bg2));
}
#search #q {
	height: 1.55em;
	width: 11.5em;
	border-radius: 1em;
	padding: 0.15em 0.5em;
}
#search input.button { height: 1.75em }
/* #endregion */
/* #endregion */



/* #region CENTER */
#page {
	padding: 0.5em 2.5em 3.5em;
	display: grid;
}
/* #region Subtitle */
#secondary {
	font-weight: var(--tweight);
	font-size: 2.15em;
	margin: .25em 0 0;
	display: inline;
}
#secondary a, #secondary span {
	color: inherit;
	line-height: 1.5;
	border-bottom: 1px dotted;
}
#secondary a:hover, #secondary span:hover {
	background-color: var(--accent);
	color: var(--bg);
}
/* #endregion */
/* #region Actions menu */
.tmblr-iframe--unified-controls.iframe-controls--desktop ~ #body #actions { top: 50px }
#actions {
	margin-bottom: 1em;
	text-align: right;
	position: sticky;
	top: 0.5em;
	z-index: 3;
}
.button.active, .pagination a.curr:not([href]):hover {
	box-shadow: inset 0.25em 0.25em 0.25em rgba(var(--text--rgb), 0.2);
	background: var(--bg2);
}
#scrolltotop_parent { display: inline-block }
#page:not(.desc) #sidebar, #page:not(.desc) #right { display: none }
/* #endregion */
/* #region Pagination */
.pagination { text-align: center }
.top.pagination { margin-bottom: 1em }
.bottom.pagination { margin-top: 1em }
.pagination a { margin: 0 0.3em }
#prev:not([href]), #next:not([href]) {
	background: none;
	border: none;
	padding: 0;
}
.pagination a:not([href]):hover {
	color: inherit;
	box-shadow: none;
	cursor: initial;
}
span.curr { margin: 0 0.75em }
/* #endregion */
/* #region Sidebar: RIGHT */
#right {
	background-color: var(--bg2);
	padding: 1.25em 3%;
	border: 0.1em solid rgba(var(--text--rgb), 0.1);
	box-shadow: inset 0.1em 0 0.25em rgba(var(--text--rgb), 0.1);
	line-height: 1.3;
}
#right a { display: inline-block }
#right > :not(:first-child) {
	--spacing: 1.5em;
	margin-top: var(--spacing);
}
#right h3 { margin: 0 }
.dropper ul, ul.dropper {
	list-style: none;
	margin: 0;
	padding: 0;
	display: flex;
	flex-direction: column;
	gap: 0.4em;
}
.dropper li {
	border-top: thin solid rgba(var(--bg--rgb), 0.65);
	padding: 0.4em 0 0 1.25em;
}
.dropper li:last-child, #updates li:last-child {
	padding-bottom: 0.4em;
	border-bottom: thin solid rgba(var(--bg--rgb), 0.65);
}
.dropper .label { position: relative; display: block }
.dropper li.hasmore .label {
	cursor: pointer;
	text-decoration: 1px dotted underline;
	text-underline-offset: 0.25em;
}
.dropper li.hasmore .label:hover { color: rgba(var(--text--rgb), 0.65) }
.dropper .label::before {
	content: "";
	display: block;
	position: absolute;
	border: 0.4em solid transparent;
	border-left-color: inherit;
	top: 0.2em;
	left: -1em;
}
.dropper li.show .label::before {
	border-left-color: transparent;
	border-top-color: inherit;
	left: -1.25em;
	top: 0.4em;
}
.dropper .more {
	display: block;
	padding: 0.25em 0;
	font-size: 0.9em;
}
.dropper li:not(.show) .more { display: none }
#updates ul, ul#updates {
	list-style: none;
	margin: 0;
	padding: 0;
}
#updates li {
	border-top: thin solid rgba(var(--bg--rgb), 0.65);
	padding: 0.4em 0;
}
#updates li .date {
	font: .9em 'Monaco', 'Consolas', Courier, monospace;
	display: block;
	margin-top: 0.25em;
}
#toggles ul, ul#toggles,
#progbars ul, ul#progbars {
	list-style: none;
	margin: 0;
	padding: 0;
	display: flex;
	flex-direction: column;
	gap: 0.6em;
}
#toggles h3, #progbars h3 {
	border-bottom: thin solid rgba(var(--bg--rgb), 0.65);
	margin-bottom: 0.3em;
}
#toggles li::before {
	content: var(--content);
	display: inline-flex;
	--size: 1.4em;
	width: var(--size);
	height: var(--size);
	align-items: end;
	justify-content: center;
	background: var(--bg) linear-gradient(var(--bg), rgba(var(--color), 0.125));
	border: thin solid rgba(var(--text--rgb), 0.7);
	border-radius: 0.25em;
	color: rgba(var(--color));
	margin-right: 0.4em;
}
#toggles li.on {
	--content: "\2713";
	--color: 0, 128, 0;
}
#toggles li.off {
	--content: "\2715";
	--color: 255, 0, 0;
}
#progbars li {
	display: grid;
	grid-template-columns: 1fr auto;
	column-gap: 0.5em;
	row-gap: 0.1em;
	align-items: last baseline;
}
#progbars .numlabel {
	font-size: 0.9em;
	font-family: var(--tfont);
}
#progbars .prog {
	grid-column: 1 / span 2;
	background-color: var(--bg);
	border-radius: 0.25em;
	overflow: hidden;
}
#progbars .prog::before {
	content: "";
	display: block;
	height: 0.5em;
	width: var(--progress);
	background-color: var(--accent);
}
/* #endregion */
/* #region Sidebar: LEFT */
#left a {
	border-bottom: none;
	line-height: 2;
	padding: 0 0.5em;
	border-radius: 0.25em;
}
#left a:hover {
	background-color: rgba(var(--bg2--rgb), 0.5);
	color: var(--accent);
}
#left a.current-page {
	background-color: var(--bg2);
	color: var(--text);
}
/* #endregion */
/* #endregion */



/* #region FOOTER */
html, body { height: 100vh }
/* ... */

